--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -105,9 +105,9 @@
 
 .featurette {
   //add back text color from Bootstrap 5.3.1 removal
-  .text-muted {
-    color: var(--bs-gray-600) !important;
-  }
+  // .text-muted {
+  //   color: var(--bs-gray-600) !important;
+  // }
   //swap order of text & image on every other featurette
   &:nth-of-type(even) {
     .col-text {
